Delete home, login, register pages from pages folder and create them under components/layouts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
@@ -19,7 +19,6 @@
     "paths": {
       "@/*": ["./*"]
     }
-
   },
   "include": ["src", "vite.config.ts"],
   "references": [
